--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
-.plausible-iframe {
+.umami-iframe {
   width: 1px;
   min-width: 100%;
   height: 1700px;
 }
 
 @media (max-width: 850px) {
-  .plausible-iframe {
+  .umami-iframe {
     height: 2300px;
   }
 }
